# test_catch_framework

./: Bar.cpp  Bar.h  CMakeLists.txt  Foo.h  LICENSE  README.md  main.cpp
src/: Bar.cpp  Foo.cpp
testsuites/: CMakeLists.txt  test_bar.cpp  test_foo.cpp  testcase.cpp
